Add preliminary FLV/RTMP output (incomplete)
 - obs-outputs module:  Add preliminary code to send out data, and add
   an FLV muxer.  This time we don't really need to build the packets
   ourselves, we can just use the FLV muxer and send it directly to
   RTMP_Write and it should automatically parse the entire stream for us
   without us having to do much manual code at all.  We'll see how it
   goes.

 - libobs:  Add AVC NAL packet parsing code

 - libobs/media-io:  Add quick helper functions for audio/video to get
   the width/height/fps/samplerate/etc rather than having to query the
   info structures each time.

 - libobs (obs-output.c):  Change 'connect' signal to 'start' and 'stop'
   signals.  'start' now specifies an error code rather than whether it
   simply failed, that way the client can actually know *why* a failure
   occurred.  Added those error codes to obs-defs.h.

 - libobs:  Add a few functions to duplicate/free encoder packets

--- a/libobs/CMakeLists.txt
+++ b/libobs/CMakeLists.txt
@@ -122,6 +122,7 @@ set(libobs_mediaio_HEADERS
 	media-io/video-scaler.h)
 
 set(libobs_util_SOURCES
+	util/array-serializer.c
 	util/base.c
 	util/platform.c
 	util/cf-lexer.c
@@ -133,6 +134,7 @@ set(libobs_util_SOURCES
 	util/text-lookup.c
 	util/cf-parser.c)
 set(libobs_util_HEADERS
+	util/array-serializer.h
 	util/utf8.h
 	util/base.h
 	util/text-lookup.h
@@ -154,6 +156,7 @@ set(libobs_util_HEADERS
 
 set(libobs_libobs_SOURCES
 	${libobs_PLATFORM_SOURCES}
+	obs-avc.c
 	obs-encoder.c
 	obs-source.c
 	obs-output.c
@@ -167,6 +170,7 @@ set(libobs_libobs_SOURCES
 	obs-video.c)
 set(libobs_libobs_HEADERS
 	obs-defs.h
+	obs-avc.h
 	obs-encoder.h
 	obs-service.h
 	obs-internal.h
