--- a/vs/2013/libobs/libobs.vcxproj
+++ b/vs/2013/libobs/libobs.vcxproj
@@ -46,6 +46,7 @@
     <ClInclude Include="..\..\..\libobs\media-io\video-frame.h" />
     <ClInclude Include="..\..\..\libobs\media-io\video-io.h" />
     <ClInclude Include="..\..\..\libobs\media-io\video-scaler.h" />
+    <ClInclude Include="..\..\..\libobs\obs-avc.h" />
     <ClInclude Include="..\..\..\libobs\obs-data.h" />
     <ClInclude Include="..\..\..\libobs\obs-defs.h" />
     <ClInclude Include="..\..\..\libobs\obs-encoder.h" />
@@ -57,6 +58,7 @@
     <ClInclude Include="..\..\..\libobs\obs-service.h" />
     <ClInclude Include="..\..\..\libobs\obs-source.h" />
     <ClInclude Include="..\..\..\libobs\obs.h" />
+    <ClInclude Include="..\..\..\libobs\util\array-serializer.h" />
     <ClInclude Include="..\..\..\libobs\util\base.h" />
     <ClInclude Include="..\..\..\libobs\util\bmem.h" />
     <ClInclude Include="..\..\..\libobs\util\c99defs.h" />
@@ -99,6 +101,7 @@
     <ClCompile Include="..\..\..\libobs\media-io\video-frame.c" />
     <ClCompile Include="..\..\..\libobs\media-io\video-io.c" />
     <ClCompile Include="..\..\..\libobs\media-io\video-scaler-ffmpeg.c" />
+    <ClCompile Include="..\..\..\libobs\obs-avc.c" />
     <ClCompile Include="..\..\..\libobs\obs-data.c" />
     <ClCompile Include="..\..\..\libobs\obs-display.c" />
     <ClCompile Include="..\..\..\libobs\obs-encoder.c" />
@@ -111,6 +114,7 @@
     <ClCompile Include="..\..\..\libobs\obs-view.c" />
     <ClCompile Include="..\..\..\libobs\obs-windows.c" />
     <ClCompile Include="..\..\..\libobs\obs.c" />
+    <ClCompile Include="..\..\..\libobs\util\array-serializer.c" />
     <ClCompile Include="..\..\..\libobs\util\base.c" />
     <ClCompile Include="..\..\..\libobs\util\bmem.c" />
     <ClCompile Include="..\..\..\libobs\util\cf-lexer.c" />
