--- a/plugins/linux-pulseaudio/CMakeLists.txt
+++ b/plugins/linux-pulseaudio/CMakeLists.txt
@@ -1,6 +1,10 @@
 project(linux-pulseaudio)
 
-find_package(PulseAudio REQUIRED)
+find_package(PulseAudio)
+if(NOT PulseAudio_FOUND)
+	message(STATUS "PulseAudio not found, disabling PulseAudio plugin")
+	return()
+endif()
 
 include_directories(SYSTEM "${CMAKE_SOURCE_DIR}/libobs")
 
