Add FFmpeg's AAC enoder
This just adds FFmpeg's default AAC encoder as an audio encoder.  Going
to try to start getting things going with the RTMP output library next.

--- a/plugins/obs-ffmpeg/CMakeLists.txt
+++ b/plugins/obs-ffmpeg/CMakeLists.txt
@@ -20,11 +20,15 @@ find_package(Libswresample REQUIRED)
 include_directories(${Libswresample_INCLUDE_DIR})
 add_definitions(${Libswresample_DEFINITIONS})
 
+set(obs-ffmpeg_HEADERS
+	obs-ffmpeg-formats.h)
 set(obs-ffmpeg_SOURCES
 	obs-ffmpeg.c
+	obs-ffmpeg-aac.c
 	obs-ffmpeg-output.c)
 	
 add_library(obs-ffmpeg MODULE
+	${obs-ffmpeg_HEADERS}
 	${obs-ffmpeg_SOURCES})
 target_link_libraries(obs-ffmpeg
 	libobs
