--- a/vs/2013/obs-ffmpeg/obs-ffmpeg.vcxproj.filters
+++ b/vs/2013/obs-ffmpeg/obs-ffmpeg.vcxproj.filters
@@ -21,5 +21,13 @@
     <ClCompile Include="..\..\..\plugins\obs-ffmpeg\obs-ffmpeg-output.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\plugins\obs-ffmpeg\obs-ffmpeg-aac.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\plugins\obs-ffmpeg\obs-ffmpeg-formats.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
