--- a/vs/2013/obs-ffmpeg/obs-ffmpeg.vcxproj
+++ b/vs/2013/obs-ffmpeg/obs-ffmpeg.vcxproj
@@ -171,8 +171,12 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\plugins\obs-ffmpeg\obs-ffmpeg-aac.c" />
     <ClCompile Include="..\..\..\plugins\obs-ffmpeg\obs-ffmpeg-output.c" />
     <ClCompile Include="..\..\..\plugins\obs-ffmpeg\obs-ffmpeg.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\plugins\obs-ffmpeg\obs-ffmpeg-formats.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
