Add window capture
Now that we have the priorties window in we can finally be able to
select windows for capture source such as window capture.  Only took
about an hour or two to write.

Also, fixed some depednency issues on winmm.lib with obs-outputs

--- a/plugins/obs-outputs/CMakeLists.txt
+++ b/plugins/obs-outputs/CMakeLists.txt
@@ -2,7 +2,8 @@ project(obs-outputs)
 
 if(WIN32)
 	set(obs-outputs_PLATFORM_DEPS
-		ws2_32.lib)
+		ws2_32.lib
+		winmm.lib)
 endif()
 
 set(obs-outputs_librtmp_HEADERS
