--- a/plugins/win-capture/CMakeLists.txt
+++ b/plugins/win-capture/CMakeLists.txt
@@ -6,13 +6,15 @@ set(win-capture_HEADERS
 set(win-capture_SOURCES
 	dc-capture.c
 	monitor-capture.c
+	window-capture.c
 	plugin-main.c)
 
 add_library(win-capture MODULE
 	${win-capture_SOURCES}
 	${win-capture_HEADERS})
 target_link_libraries(win-capture
-	libobs)
+	libobs
+	psapi.lib)
 
 install_obs_plugin(win-capture)
 install_obs_plugin_data(win-capture ../../build/data/obs-plugins/win-capture)
