Change libobs-opengl to use glew

--- a/libobs-opengl/CMakeLists.txt
+++ b/libobs-opengl/CMakeLists.txt
@@ -2,14 +2,9 @@ project(libobs-opengl)
 
 include_directories(SYSTEM "${CMAKE_SOURCE_DIR}/libobs")
 
-find_package(OpenGL REQUIRED)
-include_directories(${OPENGL_INCLUDE_DIR})
-
 add_definitions(-DLIBOBS_EXPORTS)
 
 if(WIN32)
-	set(obs-opengl_PLATFORM_SOURCES
-		GL/wgl_obs.c)
 	set(libobs-opengl_PLATFORM_SOURCES
 		gl-windows.c)
 elseif(APPLE)
@@ -34,12 +29,7 @@ elseif(APPLE)
 else()
 	set(libobs-opengl_PLATFORM_SOURCES
 		gl-x11.c)
-	set(obs-opengl_PLATFORM_SOURCES
-		GL/glx_obs.c)
 endif()
-
-set(obs-opengl_SOURCES
-	GL/gl_obs.c)
 
 set(libobs-opengl_SOURCES
 	${libobs-opengl_PLATFORM_SOURCES}
@@ -59,16 +49,6 @@ set(libobs-opengl_HEADERS
 	gl-shaderparser.h
 	gl-subsystem.h)
 
-add_library(obs-opengl STATIC
-	${obs-opengl_SOURCES}
-	${obs-opengl_PLATFORM_SOURCES})
-if(NOT WIN32)
-	set_property(TARGET obs-opengl APPEND_STRING
-		PROPERTY COMPILE_FLAGS " -fPIC")
-endif()
-target_link_libraries(obs-opengl
-	${OPENGL_gl_LIBRARY})
-
 add_library(libobs-opengl MODULE
 	${libobs-opengl_SOURCES}
 	${libobs-opengl_HEADERS})
@@ -78,7 +58,7 @@ set_target_properties(libobs-opengl
 		PREFIX "")
 target_link_libraries(libobs-opengl
 	libobs
-	obs-opengl
+	glew
 	${libobs-opengl_PLATFORM_DEPS})
 
 install_obs_core(libobs-opengl)
