--- a/vs/2013/libobs/libobs.vcxproj.filters
+++ b/vs/2013/libobs/libobs.vcxproj.filters
@@ -383,5 +383,8 @@
     <ClCompile Include="..\..\..\libobs\obs-service.c">
       <Filter>libobs\Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\libobs\media-io\video-fourcc.c">
+      <Filter>media-io\Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
